syntax = "proto3";

package pb;

import "activity.proto";

option go_package = "github.com/CineDeepMatch/Backend-server/pb";

message GetActivitiesRequest {
    string user_id = 1;
}

message GetActivitiesResponse {
    repeated Activity activities = 1;
}

